--- a/module 3 assign/css/style.css
+++ b/module 3 assign/css/style.css
@@ -1,3 +1,37 @@
-h1 {
-  color: red;
+.nav-item{
+  text-align: center;
+}
+
+.nav-item>.nav-link{
+  background-color:rgb(211, 216, 216);
+}
+
+.container-fluid{
+   margin: 0px;
+}
+
+h1{
+  margin: 20px auto;
+  text-align: center;
+}
+section>h3{
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#s1{
+  background-color: rgb(235, 159, 98);
+  margin-bottom: 20px;
+}
+#s2{
+  background-color: rgb(132, 222, 238);
+  margin-bottom: 20px;
+}
+#s3{
+  background-color: rgb(152, 233, 131);
+  margin-bottom: 20px;
+}
+
+section{
+  padding: 15px;
 }
